<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routes"
    app:startDestination="@id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.torear.resume.ui.profile.ProfileFragment"
        android:label="@string/m_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_my_edu"
        android:name="ru.torear.resume.ui.my_edu.MyEduFragment"
        android:label="@string/my_edu"
        tools:layout="@layout/fragment_my_edu" />

    <fragment
        android:id="@+id/nav_my_work"
        android:name="ru.torear.resume.ui.my_work.MyWorkFragment"
        android:label="@string/my_work_title"
        tools:layout="@layout/fragment_my_work" />

    <fragment
        android:id="@+id/nav_my_plans"
        android:name="ru.torear.resume.ui.my_plans.MyPlansFragment"
        android:label="@string/my_plans_title"
        tools:layout="@layout/fragment_my_plans" />

    <fragment
        android:id="@+id/nav_my_contacts"
        android:name="ru.torear.resume.ui.contacts.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_news"
        android:name="ru.torear.resume.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/item_news" />

    <fragment
        android:id="@+id/nav_category"
        android:name="ru.torear.resume.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_store"
        android:name="ru.torear.resume.ui.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store" />

</navigation>